# Engine24

./: .gitmodules  Buffers.h  CMakeLists.txt  Camera.h  Command.h  CopyShaders.cmake  Engine.cpp  Engine.h  EventsCallbacks.h  FileWatcher.cpp  FileWatcher.h  FrustumCulling.cpp  FrustumCulling.h  GLFWUtils.cpp  GLFWUtils.h  GLUtils.cpp  GLUtils.h  GraphComponent.h  Graphics.cpp  Graphics.h  HalfedgeMesh.h  Input.cpp  Input.h  Keybaord.h  Keyboard.cpp  Logger.cpp  Logger.h  MatVec.h  Material.h  Mesh.cpp  Mesh.h  MeshComponent.h  MeshCompute.cpp  MeshCompute.h  Mouse.cpp  Mouse.h  Plugin.h  PluginCamera.cpp  PluginCamera.h  PluginGlfwWindow.cpp  (+16 more)
Cuda/: BVHCuda.h  BVHCudaNew.h  CMakeLists.txt  CudaCommon.cu  CudaCommon.cuh  CudaCommon.h  CudaMorton.cuh  CudaTest.cuh  Hem.h  KDTreeCuda.cu  KDTreeCuda.cuh  KDTreeCuda.h  KDTreeSampling.h  Kmeans.h  KmeansResult.h  LocalGaussians.h  PluginCuda.cpp  PluginCuda.h  cuda _mat_vec.cuh  mat2.cu  mat2.cuh  mat3.cu  mat3.cuh  mat4.cu  mat4.cuh  vec2.cu  vec2.cuh  vec3.cu  vec3.cuh  vec4.cu  vec4.cuh
Cuda/Kmeans/: CMakeLists.txt  Kmeans.h  kmeans.cu
Cuda/LocalGaussians/: CMakeLists.txt  LocalGaussians.cu  LocalGaussians.h  LocalGaussiansResult.h
Cuda/exclude/: mat3.cuh  mat4.cuh  vec3.cuh  vec_operations.cuh
Cuda/include/: CudaCommon.cuh  CudaTest.cuh  aabb.cuh  aabb_utils.cuh  bvh.cuh  bvh_device.cuh  functors.cuh  gaussian.cuh  heap.cuh  hem.cuh  kmeans.cuh  lbvh.cuh  mat2.cuh  mat3.cuh  mat4.cuh  mat_vec.cuh  mat_vec_helper.cuh  math.cuh  morton_code.cuh  predicator.cuh  query.cuh  query_device.cuh  sbvh.cuh  sphere.cuh  sphere_utils.cuh  utility.cuh  vec2.cuh  vec3.cuh  vec4.cuh  vec_operations.cuh
Cuda/lbvh/: CMakeLists.txt  aabb.cuh  bvh.cuh  gaussian.cuh  heap.cuh  predicator.cuh  query.cuh  sphere.cuh  utility.cuh
Cuda/src/: BVHCuda.cu  BVHCudaNew.cu  CMakeLists.txt  CudaCommon.cu  KDTreeSampling.cu  hem.cu  hem_test.cu  kdtree_cuda.cu  kmeans.cu  local_gaussians.cu
ext/: CMakeLists.txt
ext/clopdemo-09/: LICENSE.txt  README.txt
ext/clopdemo-09/src/: base.hpp  clop.hpp  gaussian.hpp  mixture.hpp  nanooff.hpp  plyio.hpp  pointindex.hpp  pointset.hpp  vec.hpp
ext/clopdemo-09/vs2013/: clopDemo.sln
ext/glad/include/glad/: gl.h  (+1 more)
include/Core/: AABB.h  BoundedHeap.h  BoundingVolumes.h  CMakeLists.txt  Cache.h  CameraCommands.h  ChildrenComponent.h  Color.h  Colormap1D.h  Command.h  CommandDoubleBuffer.h  ComponentHandle.h  CoordinateSystems.h  DirtyTag.h  Engine.h  EngineDefines.h  Entity.h  EntityCommands.h  EntitySelection.h  EventsEntity.h  Frustum.h  Fwd.h  GLFWContext.h  GLFWUtils.h  Gaussian.h  GeometryCommon.h  GeometryData.h  GlmToEigen.h  GpuMesh.h  Graph.h  GraphInterface.h  GuiModuleHierarchy.h  GuiModuleRendererSettings.h  GuiModuleTransforms.h  Hierarchy.h  HierarchyCommands.h  HierarchyUtils.h  Icp.h  Input.h  InputManager.h  (+64 more)
include/Core/AABB/: AABB.h  AABBClosestPoint.h  AABBDistancePoint.h  AABBIntersection.h  AABBStruct.h  AABBUnion.h
include/Core/Asset/: AssetHandle.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  IAsset.h  IAssetLoader.h
include/Core/Camera/: Camera.h  CameraUtils.h  CommandsCamera.h  GuiModuleCamera.h  ModuleCamera.h  ViewMatrix.h  ViewParameters.h
include/Core/Color/: Color.h
include/Core/Gaussian/: CovarianceInterface.h  GMMLaplacianOperator.h  GaussainBhattacharyyaDistance.h  GaussianFitting.h  GaussianGalerkinLaplacian.h  GaussianInterface.h  GaussianKullbackLeiblerDivergence.h  GaussianMahalonobisDistance.h  GaussianMixture.h  GaussianMixtureInterface.h  GaussianNormalizationFactor.h  GaussianPdf.h  GaussianProduct.h  GaussianStruct.h  GaussianUtils.h  GmmUtils.h  GuiModuleGaussianMixture.h
include/Core/Geometry/: AABB.h  AABBUtils.h  BoundingVolumes.h  CMakeLists.txt  GeometricContainment.h  GeometricIntersection.h  GeometricTraits.h  GeometryCommon.h  GeometryData.h  GeometryUtils.h  GetPrimitives.h  Line.h  LineUtils.h  Plane.h  PlaneUtils.h  Segment.h  SegmentUtils.h  Sphere.h  SphereUtils.h  Triangle.h  TriangleUtils.h
include/Core/Graph/: Graph.h  GraphInterface.h
include/Core/Input/: FileInputModule.h  InputModule.h
include/Core/Math/: CMakeLists.txt  CoordinateSystems.cpp  CoordinateSystems.h  Covariance.h  GlmToEigen.h  MatUtils.h  MatVec.h
include/Core/Mesh/: CMakeLists.txt  MeshComponent.h  MeshGuiModule.h  MeshInterface.h  MeshModule.h  MeshView.h  SurfaceMeshTriangles.h  SurfaceMeshVertexNormals.h
include/Core/Module/: CMakeLists.txt  ComponentModule.h  GuiModule.h  GuiModules.cpp  GuiModules.h  ImGuiModule.h  Module.h  Modules.cpp  Modules.h  OpenGLRenderModule.h  RenderModule.h
include/Core/Pool/: DumbHandle.h  MemoryPool.h  Pool.h  PoolHandle.h
include/Core/Renderer/: CMakeLists.txt  IRenderPass.h  MeshRenderPass.cpp  MeshRenderPass.h  RenderableMeshComponent.h  Renderer.h  VectorfieldRenderPass.cpp  VectorfieldRenderPass.h
include/Core/Textures/: ModuleTexture.h
include/Core/Traits/: DimTraits.h  GlmStringTraits.h  MatTraits.h  StringTraits.h  VecTraits.h
include/Core/Transform/: CommandsTransform.h  GuiModuleTransform.h  GuiModuleTransforms.h  ModuleTransform.h  Transform.h  TransformComponent.h  TransformGui.h  TransformSystem.h  TransformUtils.h  WorldTransformComponent.h
src/Core/: AABB.cpp  AABBGui.cpp  AABBGuiModule.cpp  AABBSystem.cpp  CMakeLists.txt  Camera.cpp  CameraCommands.cpp  CameraGui.cpp  Color.cpp  Colormap1D.cpp  CommandBuffer.cpp  CommandsCamera.cpp  CommandsMesh.cpp  CommandsMeshView.cpp  CommandsPointCloud.cpp  CommandsSphereView.cpp  CommandsTransform.cpp  CoordinateSystems.cpp  Engine.cpp  Entity.cpp  EntityCommands.cpp  FileWatcher.cpp  GLFWContext.cpp  GaussianMixture.cpp  GaussianMixtureInterface.cpp  GetPrimitives.cpp  Graph.cpp  GraphInterface.cpp  GraphView.cpp  GuiModuleAABB.cpp  GuiModuleCamera.cpp  GuiModuleGaussianMixture.cpp  GuiModuleGraphLaplacian.cpp  GuiModuleHierarchy.cpp  GuiModuleMeshLaplacian.cpp  GuiModuleRendererSettings.cpp  GuiModuleTransform.cpp  GuiModuleTransforms.cpp  Hierarchy.cpp  HierarchyCommands.cpp  (+62 more)
src/Core/Input/: CMakeLists.txt  FileInputModule.cpp  InputModule.cpp
(+480 files in other folders)
