target_include_directories(Engine24 PUBLIC .)


add_subdirectory(Camera)
add_subdirectory(Color)
add_subdirectory(Gaussian)
add_subdirectory(Geometry)
add_subdirectory(Graph)
add_subdirectory(Input)
add_subdirectory(Math)
add_subdirectory(Mesh)
add_subdirectory(Module)
add_subdirectory(PointCloud)
add_subdirectory(Pool)
add_subdirectory(Transform)
add_subdirectory(Traits)
