target_include_directories(Engine24 PUBLIC .)


add_subdirectory(Asset)
add_subdirectory(Camera)
add_subdirectory(Color)
add_subdirectory(Gaussian)
add_subdirectory(Geometry)
add_subdirectory(Input)
add_subdirectory(Module)
add_subdirectory(Pool)
add_subdirectory(Renderer)
add_subdirectory(Transform)
add_subdirectory(Traits)
