add_subdirectory(Geometry)
add_subdirectory(Input)
target_sources(Engine24 PRIVATE
        AABBGuiModule.cpp
        Camera.cpp
        Color.cpp
        Engine.cpp
        Entity.cpp
        EntityCommands.cpp
        FileWatcher.cpp
        GetPrimitives.cpp
        Graph.cpp
        GraphInterface.cpp
        GLFWUtils.cpp
        HandleGlfwKeyEvents.cpp
        KDTreeCompute.cpp
        KDTreeCpu.cpp
        Keyboard.cpp
        Logger.cpp
        MeshInterface.cpp
        MeshView.cpp
        Mouse.cpp
        Plugin.cpp
        Plugins.cpp
        PointCloud.cpp
        PointCloudInterface.cpp
        PointCloudIo.cpp
        PointCloudCompute.cpp
        SurfaceMesh.cpp
        SurfaceMeshCompute.cpp
        SurfaceMeshIo.cpp
        SurfaceMeshTriangles.cpp
        SphereView.cpp
        Timer.cpp
        Utils.cpp
        VectorfieldView.cpp
)