add_subdirectory(Geometry)
add_subdirectory(Input)
target_sources(Engine24 PRIVATE
        AABB.cpp
        GuiModuleAABB.cpp
        ModuleAABB.cpp
        Camera.cpp
        Color.cpp
        CoordinateSystems.cpp
        Engine.cpp
        Entity.cpp
        EntityCommands.cpp
        FileWatcher.cpp
        GetPrimitives.cpp
        Graph.cpp
        GraphInterface.cpp
        GLFWUtils.cpp
        HandleGlfwKeyEvents.cpp
        KDTreeCompute.cpp
        KDTreeCpu.cpp
        Keyboard.cpp
        Line.cpp
        Logger.cpp
        MeshInterface.cpp
        MeshView.cpp
        MeshResources.cpp
        Mouse.cpp
        Picker.cpp
        Plane.cpp
        Plugins.cpp
        PointCloud.cpp
        PointCloudInterface.cpp
        PointCloudIo.cpp
        PointCloudCompute.cpp
        Segment.cpp
        Sphere.cpp
        SurfaceMesh.cpp
        SurfaceMeshCompute.cpp
        SurfaceMeshIo.cpp
        SurfaceMeshTriangles.cpp
        SphereView.cpp
        Timer.cpp
        Triangle.cpp
        Transform.cpp
        Utils.cpp
        VectorfieldView.cpp
)