add_subdirectory(Geometry)
add_subdirectory(Input)
target_sources(Engine24 PRIVATE
        Camera.cpp
        GuiModuleCamera.cpp
        GuiModuleTransform.cpp
        CommandsCamera.cpp
        CommandsTransform.cpp
        CommandsMesh.cpp
        CommandsMeshView.cpp
        CommandsSphereView.cpp
        Color.cpp
        CoordinateSystems.cpp
        Engine.cpp
        Entity.cpp
        EntityCommands.cpp
        FileWatcher.cpp
        GetPrimitives.cpp
        Graph.cpp
        GraphInterface.cpp
        GLFWUtils.cpp
        HandleGlfwKeyEvents.cpp
        KDTreeCpu.cpp
        Keyboard.cpp
        Line.cpp
        Logger.cpp
        MeshInterface.cpp
        MeshView.cpp
        MeshResources.cpp
        Mouse.cpp
        ModuleAABB.cpp
        ModuleCamera.cpp
        ModuleTransform.cpp
        ModuleMesh.cpp
        ModuleMeshView.cpp
        ModuleSphereView.cpp
        ModulePhongSplattingView.cpp
        Picker.cpp
        Plane.cpp
        Plugins.cpp
        PointCloud.cpp
        PointCloudInterface.cpp
        PointCloudIo.cpp
        PointCloudCompute.cpp
        PhongSplattingView.cpp
        Segment.cpp
        SurfaceMesh.cpp
        SurfaceMeshCompute.cpp
        SurfaceMeshIo.cpp
        SurfaceMeshTriangles.cpp
        SphereView.cpp
        Timer.cpp
        Triangle.cpp
        TransformUtils.cpp
        Utils.cpp
        VectorfieldView.cpp
        CameraGui.cpp
        CoordinateSystemsGui.cpp
        FrameTimerGui.cpp
        GuiUtils.cpp
        HierarchyGui.cpp
        KDTreeGui.cpp
        MouseGui.cpp
        PickerGui.cpp
        PointCloudGui.cpp
        PropertiesGui.cpp
        SelectionGui.cpp
        TransfromGui.cpp
        VectorfieldViewGui.cpp
)